--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -412,9 +412,12 @@ footer .footer-copyright {
 }
 
 @media (max-width: 675px) {
+    .body .container-picture picture img{
+        padding: 0;
+    }
     .body .container-picture {
-        padding-top: 60px;
-        height: 95vh;
+        padding-top: 0px;
+        height: auto;
     }
     .body h2{
         padding-top: 0px;
