--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -271,12 +271,55 @@ main {
     height: 50vh;
 }
 
+.body .container{
+    display: flex;
+    flex-direction: column;
+}
+
 .body h2{
+    margin: 0 auto;
     font-size: 30px;
     color: #212121;
-    width: 47.5%;
+    width: 100%;
     text-align: center;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.body .botao-cta-2 {
+    border: none;
+    border-radius: 5px;
+    background: #80D315;
+    color: #212121;
+    -webkit-box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
+    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, .5);
+    display: flex;
+    width: 85%;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 0 auto;
+    min-width: 5.25rem;
+    min-height: 3rem;
+    padding: .85rem;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    transition: .71s
+}
+
+.body .botao-cta-2 svg {
+    color: #212121;
+    height: 1.875rem;
+    transition: transform .2s linear;
+    width: 1.875rem;
+    margin-right: 10px;
+}
+
+.body .botao-cta-2:hover {
+    background: #e4ffc0;
+    border: none;
+    transition: .72s
 }
 
 .sobre {
@@ -340,7 +383,7 @@ main {
 }
 
 .sobre .container-round{
-    margin-top: 110px;
+    margin-top: 50px;
     background: #e50000;
     height: 75vh;
     width: 95%;
@@ -368,6 +411,9 @@ footer .footer-copyright {
     .body .container-picture {
         padding-top: 60px;
         height: 95vh;
+    }
+    .body h2{
+        margin-top: 20px;
     }
 }
 
@@ -453,8 +499,19 @@ footer .footer-copyright {
     .body h2{
         font-size: 22px;
         width: 85%;
-        margin-bottom: 20px;
         padding-top: 40px;
+    }
+    .body .container{
+        padding-bottom: 40px;
+    }
+    .body .botao-cta-2 {
+        width: 97.5%;
+        font-size: 15px;
+        font-weight: 600;
+        margin: 0 auto;
+        min-width: 6.25rem;
+        min-height: 3.5rem;
+        padding: .85rem;
     }
     .sobre .container{
         padding: 0;
