--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -657,6 +657,7 @@ footer .footer-copyright {
     }
     .end .container-round {
         padding-bottom: 29.5px;
+        height: fit-content;
     }
     .end .container-items .box-items h1 {
         width: 90%;
