--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -661,6 +661,9 @@ footer .footer-copyright {
         padding-bottom: 29.5px;
         height: fit-content;
     }
+    .end .container-round .container{
+        padding: 0px;
+    }
     .end .container-round .container-picture picture img {
         padding-bottom: 0px;
     }
